# Cookiful

./: .dockerignore  .env.example  .gitignore  .gitmodules  LICENSE  README.md  package.json  render.yaml  tsconfig.base.json  turbo.json
.github/workflows/: deploy-web-pages.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/: main.py
apps/api/src/api/: router.py
apps/api/src/api/routes/: auth.py  health.py  me.py  recipes.py
apps/api/src/cookiful_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/core/: config.py  cors.py
apps/api/tests/: test_api_config.py  test_auth_route.py  test_database_reset.py  test_me_route.py  test_recipe_box_image_scraper.py  test_recipe_box_import_script.py  test_recipe_box_json_importer.py  test_recipe_catalog_view.py  test_recipes_route.py
apps/mobile/: README.md  package.json
apps/mobile/src/: README.md
apps/web/: Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/worker/: README.md  package.json
apps/worker/src/: index.ts
docs/api/: mvp-endpoints.md
docs/architecture/: erd-summary.md  modules.md  overview.md
docs/deployment/: render-and-github-pages.md
docs/design/home/: code.html
docs/design/landing/: DESIGN.md  code.html
docs/design/login/: DESIGN.md  code.html
docs/implementation/: mvp-plan.md
docs/product/: cooking-session-state-machine.md  meal-planning-grocery-rules.md
infrastructure/deployment/: README.md
infrastructure/docker/: README.md  docker-compose.dev.yml
(+72 files in other folders)
