[project]
name = "cookiful-api"
version = "0.1.0"
description = "Cookiful Python API service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

